--- a/index4.html
+++ b/index4.html
@@ -81,7 +81,10 @@
             justify-content: center;
             align-items: center;
             margin-top: 20px;
-            width: 100%;
+            width: 400px;
+            /* Фиксированная ширина для таблицы */
+            height: 400px;
+            /* Фиксированная высота для таблицы */
         }
 
         .grid {
@@ -89,6 +92,8 @@
             gap: 5px;
             position: relative;
             justify-items: center;
+            width: 100%;
+            height: 100%;
         }
 
         .cell {
@@ -97,13 +102,13 @@
             align-items: center;
             font-size: 20px;
             font-weight: bold;
-            width: 60px;
-            height: 60px;
             border-radius: 10px;
             cursor: pointer;
             user-select: none;
             background-color: #87CEEB;
             transition: transform 0.2s;
+            width: 100%;
+            height: 100%;
         }
 
         .cell:hover {
@@ -200,6 +205,7 @@
         let elapsedTime = 0;
         let totalCells;
         let selectedGridSize;
+        let gameStarted = false; // Флаг, показывающий, началась ли игра
 
         // Выбор размера таблицы
         function selectGridSize(size) {
@@ -210,6 +216,7 @@
 
         // Функция запуска игры
         function startGame() {
+            gameStarted = true; // Игра началась
             document.getElementById("start-btn").style.display = "none"; // Скрываем кнопку "Начать"
             document.getElementById("result").textContent = ""; // Скрытие результата
             startTimer(); // Запуск таймера
@@ -242,8 +249,8 @@
 
             const grid = document.getElementById("grid");
             grid.innerHTML = "";
-            grid.style.gridTemplateColumns = `repeat(${size}, 60px)`;
-            grid.style.gridTemplateRows = `repeat(${size}, 60px)`;
+            grid.style.gridTemplateColumns = `repeat(${size}, 1fr)`;
+            grid.style.gridTemplateRows = `repeat(${size}, 1fr)`;
 
             const numbers = Array.from({ length: size * size }, (_, i) => i + 1).sort(() => Math.random() - 0.5);
             const cells = [];
@@ -256,8 +263,12 @@
                 cell.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
                 cell.addEventListener("click", () => {
                     // Проверка на правильность последовательности
-                    if (parseInt(cell.textContent) === currentNumber) {
-                        cell.style.visibility = "hidden";
+                    if (gameStarted && parseInt(cell.textContent) === currentNumber) {
+                        // Вибрация на мобильных устройствах
+                        if (navigator.vibrate) {
+                            navigator.vibrate(200); // Вибрация на 200 миллисекунд
+                        }
+
                         currentNumber++;
                         if (currentNumber > totalCells) {
                             endGame();
@@ -268,12 +279,13 @@
                 cells.push(cell);
             });
 
-            // Расставляем точку в центре
-            const centerIndex = Math.floor(size * size / 2); // Находим центральную ячейку
-            const centerCell = cells[centerIndex];
-            const dot = document.createElement("div");
-            dot.classList.add("center-dot");
-            centerCell.appendChild(dot);
+            if (size === 4 || size === 6 || size === 8) {
+                const centerIndex = Math.floor(size * size / 2); // Находим центральную ячейку
+                const centerCell = cells[centerIndex];
+                const dot = document.createElement("div");
+                dot.classList.add("center-dot");
+                centerCell.appendChild(dot);
+            }
         }
     </script>
 </body>
