--- a/index4.html
+++ b/index4.html
@@ -81,10 +81,10 @@
             justify-content: center;
             align-items: center;
             margin-top: 20px;
-            width: 400px;
-            /* Фиксированная ширина для таблицы */
-            height: 400px;
-            /* Фиксированная высота для таблицы */
+            width: 80vw; /* Уменьшаем ширину таблицы для мобильных */
+            height: 80vw; /* Ширина и высота пропорциональны */
+            max-width: 400px; /* Максимальная ширина для больших экранов */
+            max-height: 400px; /* Максимальная высота для больших экранов */
         }
 
         .grid {
@@ -165,9 +165,9 @@
             }
 
             .cell {
-                width: 50px;
-                height: 50px;
-                font-size: 18px;
+                width: 20vw;
+                height: 20vw;
+                font-size: 16px;
             }
 
             #result {
